# QS-DMSS

./: .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README-pypi.md  README.md  RELEASE.md  SECURITY.md  codemeta.json  pyproject.toml  render.yaml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  contributor_task.yml  feature_request.yml  hpc_site_policy_review.yml  reproducibility_review.yml  reviewer_opt_in.yml  scientific_review.yml
.github/scripts/: fresh_install_smoke.py  verify_public_deployment.py
.github/workflows/: ci.yml  fresh-install-smoke.yml  pages.yml  publish-pypi.yml  verify-production-deploy.yml
benchmarks/: README.md
configs/: conservation_baseline.yaml  demo.yaml  fractal_quadrant_ssfm.yaml  interaction_response.yaml  uniform_control.yaml
docs/: ai-evidence-assistant.md  ascl-joss-readiness.md  benchmark-validation.md  beta-readiness.md  circulation-funnel.md  community-outreach-wave-1.md  conceptual-reference-map.md  contributor-map.md  contributor-roadmap.md  decision-profile-example.md  demo-benchmark-expectations.md  distributed-research-workspace-executor-architecture.md  evidence-bundle-glossary.md  external-review-outreach.md  external-review-wave-1.md  fractal-quadrant-ssfm-validation-spine.md  fractal-ssfm-independent-review-v0.13.2.md  fractal-ssfm-qpu-request-bundle.md  fractal-ssfm-quantum-sidecar.md  funding-roadmap.md  hosted-studio-demo.md  joss-preflight.md  outreach-contact-avenues.md  ownership-and-use.md  post-v0.3-active-roadmap.md  premium-polish-backlog.md  product-vision.md  public-link-update-checklist.md  public-technical-launch-post.md  pypi-distribution-readiness.md  quantum-compilation-validation.md  reference-data-calibration.md  release-v0.10.0.md  release-v0.10.1.md  release-v0.11.0.md  release-v0.12.0.md  release-v0.13.0.md  release-v0.13.1.md  release-v0.13.2.md  release-v0.8.0.md  (+14 more)
docs/decisions/: 0001-commercial-sustainability-and-licensing-boundary.md
docs/review-evidence/: fractal-ssfm-v0.13.2.json
fractal-ssfm-validation/: fractal-ssfm-validation.json
paper/: paper.bib  paper.md
schemas/: run_config.schema.json
site/: BingSiteAuth.xml  CNAME  build_portal.py  index.html  llms.txt  navigation.js  robots.txt  sitemap.xml  styles.css
src/qs_dmss/: __init__.py  ai.py  app.py  benchmarks.py  cli.py  data_registry.py  decision.py  deployment.py  execution.py  experiment.py  fractal_validation.py  paths.py  quantum_compilation.py  quantum_compilation_report.py  quantum_request.py  quantum_showcase.py  quantum_sidecar.py  showcase.py
src/qs_dmss/assets/: __init__.py
src/qs_dmss/assets/benchmarks/expected/: demo-baseline.metrics.json  parameter-sensitivity.metrics.json  resolution-smoke.metrics.json
src/qs_dmss/assets/benchmarks/scenarios/: demo-baseline.yaml  parameter-sensitivity.yaml  resolution-smoke.yaml
src/qs_dmss/assets/campaign-studies/: self-interaction-sweep.json
src/qs_dmss/assets/configs/: conservation_baseline.yaml  interaction_response.yaml  uniform_control.yaml
src/qs_dmss/assets/data/: public-sources.json
src/qs_dmss/assets/data/calibration/: workflow-smoke-reference.json
src/qs_dmss/assets/quantum/: fractal-fuzzy-4x4.yaml
src/qs_dmss/assets/quantum/compilation-showcase/: manifest.sha256.json  quantum-compilation-matrix.csv  quantum-compilation-validation.html  quantum-compilation-validation.json  quantum-compilation-validation.md
src/qs_dmss/assets/schemas/: run_config.schema.json
src/qs_dmss/assets/showcases/: canonical-simulation.yaml  fractal-quadrant-validation-preview.yaml  self-interaction-response.yaml
src/qs_dmss/cockpit/: __init__.py  api.py  server.py
src/qs_dmss/cockpit/static/: app.js  index.html  styles.css
src/qs_dmss/core/: __init__.py  fractal_ssfm.py  solver.py  solver_registry.py
src/qs_dmss/evidence/: __init__.py  bundle.py  verify.py
src/qs_dmss/io/: __init__.py  config.py
src/qs_dmss/run/: __init__.py  ledger.py
tests/: test_ai.py  test_benchmarks.py  test_campaign.py  test_cli_campaigns.py  test_cli_experiments.py  test_cockpit_accessibility.py  test_cockpit_api.py  test_data_registry.py  test_decision.py  test_deployment.py  test_execution_contract.py  test_fractal_ssfm_backend.py  test_fractal_validation.py  test_governance.py  test_packaging.py  test_paths.py  test_quantum_compilation.py  test_quantum_request.py  test_quantum_sidecar.py  test_run_smoke.py  test_showcase.py  test_static_site.py
