[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qs-dmss"
version = "0.1.4"
description = "Evidence-first reference package for the QuantumScalar Dark Matter Simulation Suite."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "AI Bio Synergy Holdings LLC" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "fastapi>=0.116",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "uvicorn>=0.35",
]

[project.urls]
Homepage = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS"
Repository = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS"
Issues = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/issues"
Releases = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/releases"
Documentation = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS#readme"
PyPI = "https://pypi.org/project/qs-dmss/"
DOI = "https://doi.org/10.5281/zenodo.20074924"
Zenodo = "https://zenodo.org/records/20074925"

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.0",
  "tomli>=2.0; python_version < '3.11'",
  "twine>=6.0",
]

[project.scripts]
qs-dmss = "qs_dmss.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qs_dmss.assets" = ["configs/*.yaml", "schemas/*.json"]
"qs_dmss.cockpit" = ["static/*.css", "static/*.html", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
