[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qs-dmss"
version = "0.2.0"
description = "Evidence-first reference package for the QuantumScalar Dark Matter Simulation Suite."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "AI Bio Synergy Holdings LLC" }
]
keywords = [
  "dark matter",
  "scientific computing",
  "simulation",
  "reproducibility",
  "schrodinger-poisson",
  "evidence bundles",
  "research software",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "fastapi>=0.116",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "uvicorn>=0.35",
]

[project.urls]
Homepage = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS"
Repository = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS"
Issues = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/issues"
Releases = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/releases"
Documentation = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS#readme"
Contributing = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/CONTRIBUTING.md"
Review = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/issues/new/choose"
"Reviewer Quickstart" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/reviewer-wheel-quickstart.md"
"Circulation Funnel" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/circulation-funnel.md"
"Beta Readiness" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/beta-readiness.md"
PyPI = "https://pypi.org/project/qs-dmss/"
DOI = "https://doi.org/10.5281/zenodo.20074924"
"First Archived Release DOI" = "https://doi.org/10.5281/zenodo.20074925"
"Latest Archived Release DOI" = "https://doi.org/10.5281/zenodo.20091602"
Zenodo = "https://zenodo.org/records/20091602"

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.0",
  "tomli>=2.0; python_version < '3.11'",
  "twine>=6.0",
]

[project.scripts]
qs-dmss = "qs_dmss.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qs_dmss.assets" = ["configs/*.yaml", "schemas/*.json"]
"qs_dmss.cockpit" = ["static/*.css", "static/*.html", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
