[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qs-dmss"
version = "0.13.2"
description = "Evidence-first QuantumScalar simulation lab with reproducible scientific workflows, validation spines, and simulator-first quantum-readiness artifacts."
readme = "README-pypi.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "AI-Bio Synergy Holdings LLC" }
]
keywords = [
  "dark matter",
  "scientific computing",
  "simulation",
  "reproducibility",
  "schrodinger-poisson",
  "evidence bundles",
  "study templates",
  "campaign studio",
  "research objects",
  "research software",
  "quantum computing",
  "quantum simulation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "fastapi>=0.116",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "starlette>=1.3.1",
  "uvicorn>=0.35",
]

[project.urls]
Homepage = "https://qs-dmss.studio"
"QS-DMSS Studio" = "https://qs-dmss.studio"
Repository = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS"
Issues = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/issues"
Releases = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/releases"
"Release Notes" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/release-v0.13.2.md"
Documentation = "https://qs-dmss.studio"
Contributing = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/CONTRIBUTING.md"
Review = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/issues/new/choose"
"Reviewer Packet" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/reviewer-packet.md"
"Reviewer Quickstart" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/reviewer-wheel-quickstart.md"
"Circulation Funnel" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/circulation-funnel.md"
"Beta Readiness" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/beta-readiness.md"
"Benchmark Validation" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/benchmark-validation.md"
"Reference Data Calibration" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/reference-data-calibration.md"
"Conceptual Reference Map" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/conceptual-reference-map.md"
"Simulation Showcase" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/simulation-showcase.md"
"JOSS Preflight" = "https://github.com/AI-Bio-Synergy-Holdings-LLC/QS-DMSS/blob/main/docs/joss-preflight.md"
PyPI = "https://pypi.org/project/qs-dmss/"
DOI = "https://doi.org/10.5281/zenodo.20074924"

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "httpx2>=2.3",
  "pytest>=8.0",
  "tomli>=2.0; python_version < '3.11'",
  "twine>=6.0",
]
gpu = [
  "cupy-cuda12x>=13.0",
]
quantum = [
  "qiskit>=2.0",
  "qiskit-aer>=0.17",
]

[project.scripts]
qs-dmss = "qs_dmss.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qs_dmss.assets" = [
  "benchmarks/expected/*.json",
  "benchmarks/scenarios/*.yaml",
  "campaign-studies/*.json",
  "configs/*.yaml",
  "data/*.json",
  "data/calibration/*.json",
  "quantum/*.yaml",
  "quantum/compilation-showcase/*.csv",
  "quantum/compilation-showcase/*.json",
  "quantum/compilation-showcase/*.html",
  "quantum/compilation-showcase/*.md",
  "quantum/compilation-showcase/*.zip",
  "schemas/*.json",
  "showcases/*.yaml",
]
"qs_dmss.cockpit" = ["static/*.css", "static/*.html", "static/*.js", "static/*.png", "static/*.svg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
